Fix github iframe dark mode
Resolves https://github.com/lindylearn/unclutter/issues/303

--- a/apps/unclutter/source/overlay/index.css
+++ b/apps/unclutter/source/overlay/index.css
@@ -11,6 +11,7 @@
     min-width: 0 !important;
     border: none !important;
     box-shadow: none !important;
+    color-scheme: auto !important;
 }
 .lindy-page-settings-toprght {
     all: revert;
